--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sdc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./server/index.js",
   "scripts": {
     "server-dev": "npx nodemon --watch server server/index.js",
     "start": "node .",
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "node": "^20.6.0",
     "pg": "^8.11.3",
     "url-parse": "^1.5.10"
   }
